chore(config): update configuration

--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -1,38 +1,83 @@
 autoUpdate:
   enabled: false
   schedule: ""
+bootConfigURL: https://github.com/cloudbees/cloudbees-jenkins-x-boot-config.git
 cluster:
-  clusterName: ""
-  environmentGitOwner: ""
+  clusterName: acmecluster1
+  devEnvApprovers:
+  - alex-sainer
+  environmentGitOwner: akido-incubator
   environmentGitPublic: true
-  project: ""
-  azure: {}
-  provider: gke
-  zone: ""
-gitops: true
+  gitKind: github
+  gitName: github
+  gitServer: https://github.com
+  namespace: jx
+  provider: eks
+  region: eu-central-1
+  registry: 173275052535.dkr.ecr.eu-central-1.amazonaws.com
 environments:
-  - key: dev
-  - key: staging
-  - key: production
+- ingress:
+    domain: dev.myposter.de
+    externalDNS: true
+    ignoreLoadBalancer: true
+    namespaceSubDomain: -jx.
+    tls:
+      email: alex.bucher@myposte.de
+      enabled: true
+      production: true
+  key: dev
+- ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: staging
+- ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: production
+gitops: true
 ingress:
-  domain: ""
-  externalDNS: false
+  domain: dev.myposter.de
+  externalDNS: true
+  ignoreLoadBalancer: true
+  namespaceSubDomain: -jx.
   tls:
-    email: ""
-    enabled: false
-    production: false
+    email: alex.bucher@myposte.de
+    enabled: true
+    production: true
 kaniko: true
+repository: nexus
 secretStorage: vault
 storage:
+  backup:
+    enabled: false
+    url: ""
   logs:
     enabled: true
-    url: ""
+    url: s3://acmecluster1-logs-d6223f34-5b6a-402a-93cf-443c9ff93d12
   reports:
     enabled: true
-    url: ""
+    url: s3://acmecluster1-reports-f223a723-5c12-45d6-877c-81ad9064b098
   repository:
     enabled: true
-    url: ""
+    url: s3://acmecluster1-repository-4ab759e3-d82c-4629-a7ba-5eb544e71cfb
+vault:
+  aws:
+    autoCreate: true
+    iamUserName: jenkins-x
+  disableURLDiscovery: true
+velero:
+  schedule: ""
+  ttl: ""
 versionStream:
   ref: 2.0.1139+cjxd.6
   url: https://github.com/cloudbees/cloudbees-jenkins-x-versions.git
